core/goldilocks/overlays/in-cluster/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    backstage.io/kubernetes-id: goldilocks
    goldilocks.fairwinds.com/enabled: "true"
  name: goldilocks
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: goldilocks
    helm.sh/chart: goldilocks-8.0.1
  name: goldilocks-dashboard
  namespace: goldilocks
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/name: goldilocks
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: goldilocks
    helm.sh/chart: goldilocks-8.0.1
  name: goldilocks-controller
  namespace: goldilocks
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: goldilocks
      app.kubernetes.io/name: goldilocks
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: goldilocks
        app.kubernetes.io/name: goldilocks
    spec:
      containers:
      - command:
        - /goldilocks
        - controller
        - -v2
        image: us-docker.pkg.dev/fairwinds-ops/oss/goldilocks:v4.10.0
        imagePullPolicy: Always
        name: goldilocks
        resources:
          limits: {}
          requests:
            cpu: 25m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10324
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: goldilocks-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: goldilocks
    helm.sh/chart: goldilocks-8.0.1
  name: goldilocks-dashboard
  namespace: goldilocks
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/instance: goldilocks
      app.kubernetes.io/name: goldilocks
  template:
    metadata:
      labels:
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: goldilocks
        app.kubernetes.io/name: goldilocks
    spec:
      containers:
      - command:
        - /goldilocks
        - dashboard
        - --exclude-containers=linkerd-proxy,istio-proxy
        - -v2
        image: us-docker.pkg.dev/fairwinds-ops/oss/goldilocks:v4.10.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: http
        name: goldilocks
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: http
        resources:
          limits: {}
          requests:
            cpu: 25m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10324
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: goldilocks-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: goldilocks
    helm.sh/chart: goldilocks-8.0.1
  name: goldilocks-dashboard
  namespace: goldilocks
spec:
  ingressClassName: nginx
  rules:
  - host: goldilocks.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: goldilocks-dashboard
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - goldilocks.k8s.integratn.tech
    secretName: goldilocks-tls
